--- a/.htaccess
+++ b/.htaccess
@@ -335,8 +335,9 @@ FileETag None
   RewriteEngine On
   
   
-  RewriteRule ^river/(([a-zA-Z]|-|_|%20)*) river.php?river=$1
-  RewriteRule ^user/(([a-zA-Z]|-|_|%20)*) user.php?username=$1
+  RewriteRule ^(-?\d{1,3}.\d{1,10})/(-?\d{1,3}.\d{1,10})/(\d{1,2}) index.php?lat=$1&lng=$2&zoom=$3
+  RewriteRule ^(-?\d{1,3}.\d{1,10})/(-?\d{1,3}.\d{1,10})/(\d{1,2})/([a-z]+)/(\d+) index.php?lat=$1&lng=$2&zoom=$3&type=$4&id=$5
+  RewriteRule ^([a-z]+)/(\d+) index.php?type=$1&id=$2
   
   
 # RewriteBase /
